@@ -47,47 +47,49 @@ class TemplatesModelTemplate extends JModelLegacy
 	 */
 	public function getFiles()
 	{
-		$result	= array();
+		$result = array();
 
 		if ($template = $this->getTemplate())
 		{
 			jimport('joomla.filesystem.folder');
 
 			$client = JApplicationHelper::getClientInfo($template->client_id);
-			$path	= JPath::clean($client->path.'/templates/'.$template->element.'/');
-			$lang	= JFactory::getLanguage();
+			$path   = JPath::clean($client->path . '/templates/' . $template->element . '/');
+			$lang   = JFactory::getLanguage();
 
 			// Load the core and/or local language file(s).
-			$lang->load('tpl_'.$template->element, $client->path, null, false, false)
-				||	$lang->load('tpl_'.$template->element, $client->path.'/templates/'.$template->element, null, false, false)
-				||	$lang->load('tpl_'.$template->element, $client->path, $lang->getDefault(), false, false)
-				||	$lang->load('tpl_'.$template->element, $client->path.'/templates/'.$template->element, $lang->getDefault(), false, false);
+			$lang->load('tpl_' . $template->element, $client->path, null, false, false) || $lang->load('tpl_' . $template->element, $client->path . '/templates/' . $template->element, null, false, false) || $lang->load('tpl_' . $template->element, $client->path, $lang->getDefault(), false, false) || $lang->load('tpl_' . $template->element, $client->path . '/templates/' . $template->element, $lang->getDefault(), false, false);
 
 			// Check if the template path exists.
-
 			if (is_dir($path))
 			{
 				$result['main'] = array();
-				$result['css'] = array();
-				$result['clo'] = array();
-				$result['mlo'] = array();
+				$result['css']  = array();
+				$result['clo']  = array();
+				$result['mlo']  = array();
 				$result['html'] = array();
 
 				// Handle the main PHP files.
-				$result['main']['index'] = $this->getFile($path, 'index.php');
-				$result['main']['error'] = $this->getFile($path, 'error.php');
-				$result['main']['print'] = $this->getFile($path, 'component.php');
+				$result['main']['index']   = $this->getFile($path, 'index.php');
+				$result['main']['error']   = $this->getFile($path, 'error.php');
+				$result['main']['print']   = $this->getFile($path, 'component.php');
 				$result['main']['offline'] = $this->getFile($path, 'offline.php');
 
 				// Handle the CSS files.
-				$files = JFolder::files($path.'/css', '\.css$', false, false);
-
-				foreach ($files as $file)
+				if (is_dir($path . '/css'))
 				{
-					$result['css'][] = $this->getFile($path.'/css/', 'css/'.$file);
+					$files = JFolder::files($path . '/css', '\.css$', false, false);
+
+					foreach ($files as $file)
+					{
+						$result['css'][] = $this->getFile($path . '/css/', 'css/' . $file);
+					}
 				}
-			} else {
+			}
+			else
+			{
 				$this->setError(JText::_('COM_TEMPLATES_ERROR_TEMPLATE_FOLDER_NOT_FOUND'));
+
 				return false;
 			}
 		}
